--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Hux Blog
-SEOTitle: 黄玄的博客 | Hux Blog
+title: Mio Blog
+SEOTitle: Mio的博客 | Mio's Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
+email: miomoyule@gmail.com
+description: "这里是 @Mio 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
+keyword: "Mio, Mio黄玄, Mio, Mio, Mio, @Mio, Mio, Mio Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
 url: "https://huangxuan.me" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -13,11 +13,11 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username: huxpro
-zhihu_username: huxpro
-github_username: huxpro
-twitter_username: huxpro
-#facebook_username:  huxpro
+weibo_username: Mio
+zhihu_username: Mio
+github_username: Mio
+twitter_username: Mio
+#facebook_username:  Mio
 #linkedin_username:  firstname-lastname-idxxxx
 
 # Build settings
