--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: Mio的博客 | Mio's Blog
 header-img: img/home-bg.jpg
 email: miomoyule@gmail.com
 description: "这里是 @Mio 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
-keyword: "Mio, Mio黄玄, Mio, Mio, Mio, @Mio, Mio, Mio Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
+keyword: "Mio, Mio, Mio, Mio, Mio, @Mio, Mio, Mio Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
 url: "https://huangxuan.me" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
